[package]
name = "raytracer_rust"
version = "0.1.0"
edition = "2024"
description = "A simple Rust raytracer"
license = "None"
repository = "https://github.com/TimurBora/raytracer_rust"
categories = ["graphics", "raytracing"]
keywords = ["raytracing", "rust", "graphics"]
readme = "README.md"

[dependencies]
winit = "0.30.9"
anyhow = "1.0.97"
pixels = "0.15.0"
rayon = "1.10.0"
atomic_float = "1.1.0"

[profile.release]
debug = true
